--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,12 @@ code {
   margin-right: 35px;
   margin-bottom: 20px;
 }
+@media only screen and (max-width: 600px) {
+  .content {
+    margin-top: 80px;
+    transition: all 0.5s ease;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 50px;
+  }
+}
