--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,34 @@ code {
   margin-right: 35px;
   margin-bottom: 20px;
 }
+.particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #18191a;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #242526;
+}
 @media only screen and (max-width: 600px) {
   .content {
     margin-top: 80px;
